--- a/server/src-rsr/hdb_metadata.yaml
+++ b/server/src-rsr/hdb_metadata.yaml
@@ -279,3 +279,8 @@ args:
         column_mapping:
           return_type_schema: table_schema
           return_type_name: table_name
+
+- type: add_existing_table_or_view
+  args:
+    schema: hdb_catalog
+    name: hdb_remote_relationship
