--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,7 @@ jobs:
         name: Install latest postgresql client tools
         command: |
           apt-get -y update
-          apt-get install postgresql-client-11
+          apt-get -y install postgresql-client-11
     - run:
         name: Build the server
         working_directory: ./server
