--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,7 +223,7 @@ jobs:
     environment:
       PG_VERSION: "11_1"
     docker:
-    - image: hasura/graphql-engine-server-builder:20190314
+    - image: hasura/graphql-engine-server-builder:20190415-1
       # TODO: change this to circleci postgis when they have one for pg 11
     - image: mdillon/postgis:11-alpine
       <<: *test_pg_env
@@ -233,7 +233,7 @@ jobs:
     environment:
       PG_VERSION: "10_6"
     docker:
-    - image: hasura/graphql-engine-server-builder:20190314
+    - image: hasura/graphql-engine-server-builder:20190415-1
     - image: circleci/postgres:10.6-alpine-postgis
       <<: *test_pg_env
 
@@ -242,7 +242,7 @@ jobs:
     environment:
       PG_VERSION: "9_6"
     docker:
-    - image: hasura/graphql-engine-server-builder:20190314
+    - image: hasura/graphql-engine-server-builder:20190415-1
     - image: circleci/postgres:9.6-alpine-postgis
       <<: *test_pg_env
 
@@ -251,7 +251,7 @@ jobs:
     environment:
       PG_VERSION: "9_5"
     docker:
-    - image: hasura/graphql-engine-server-builder:20190314
+    - image: hasura/graphql-engine-server-builder:20190415-1
     - image: circleci/postgres:9.5-alpine-postgis
       <<: *test_pg_env
 
