switch to hasura's pg-client-hs

--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -12,10 +12,8 @@ packages:
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
-# - git: https://github.com/hasura/pg-client-hs.git
-  # commit: b57f637fa8ffa230a8abb501c4ea2b1d85ace5bc
-- git: https://github.com/0x777/pg-client-hs.git
-  commit: 94bb9b24d5692a7fae41133061ff9bd0ad5e3213
+- git: https://github.com/hasura/pg-client-hs.git
+  commit: 85f9c2c15e4fa09f2e2a86dbb23149b5256bdd34
 - git: https://github.com/hasura/graphql-parser-hs.git
   commit: ff95d9a96aa5ef9e5390f8712958e4118e3831f6
 - ginger-0.8.4.0
