--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -176,6 +176,7 @@ library
                      , Hasura.RQL.Types.DML
                      , Hasura.RQL.Types.EventTrigger
                      , Hasura.RQL.Types.RemoteSchema
+                     , Hasura.RQL.Types.Metadata
                      , Hasura.RQL.DDL.Deps
                      , Hasura.RQL.DDL.Permission.Internal
                      , Hasura.RQL.DDL.Permission.Triggers
