--- a/community/learn/graphql-tutorials/tutorials/react-apollo/app-final/package.json
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/app-final/package.json
@@ -6,6 +6,7 @@
   },
   "private": true,
   "dependencies": {
+    "@playlyfe/gql": "^2.6.1",
     "apollo-boost": "^0.3.1",
     "apollo-link-ws": "^1.0.17",
     "auth0-js": "^9.10.1",
