Removes stray files

--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/Dockerfile
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/Dockerfile
@@ -12,15 +12,13 @@ COPY package.json ./
 RUN npm install
 
 # Bundle app source
-COPY . .
+COPY tutorial-site/ .
 
 ENV GATSBY_PATH_PREFIX="/react-apollo"
 
 # Build react/vue/angular bundle static files
 RUN npm run build
 
-EXPOSE 8080
-
 # serve dist folder on port 8080
 #CMD ["serve", "-s", "public", "-p", "8080"]
-CMD ["gatsby", "serve", "--verbose", "--prefix-paths", "-p", "8080"]
+CMD ["gatsby", "serve", "--verbose", "--prefix-paths", "-p ${PORT}"]
