--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/package.json
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/package.json
@@ -7,21 +7,22 @@
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@emotion/core": "^10.0.10",
-    "@mdx-js/loader": "^0.15.0-2",
-    "@mdx-js/mdx": "^0.20.3",
+    "@emotion/styled-base": "^10.0.10",
+    "@mdx-js/loader": "^1.0.10",
+    "@mdx-js/mdx": "^1.0.10",
+    "@mdx-js/react": "^1.0.6",
     "@playlyfe/gql": "^2.6.1",
-    "core-js": "^2.6.5",
     "dotenv": "^6.2.0",
     "emotion": "^10.0.9",
     "emotion-server": "^10.0.9",
     "emotion-theming": "^10.0.10",
-    "gatsby": "2.3.17",
-    "gatsby-mdx": "^0.4.5",
+    "gatsby": "2.3.25",
+    "gatsby-mdx": "^0.6.2",
     "gatsby-plugin-emotion": "4.0.6",
     "gatsby-plugin-google-analytics": "2.0.18",
     "gatsby-plugin-react-helmet": "3.0.12",
-    "gatsby-plugin-sharp": "^2.0.33",
-    "gatsby-remark-copy-linked-files": "^2.0.8",
+    "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-remark-copy-linked-files": "^2.0.11",
     "gatsby-remark-images": "3.0.10",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.8",
@@ -29,13 +30,13 @@
     "is-absolute-url": "^2.1.0",
     "lodash.flatten": "^4.4.0",
     "lodash.startcase": "^4.4.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-emotion": "^9.1.3",
-    "react-feather": "^1.1.3",
+    "react-feather": "^1.1.6",
     "react-helmet": "^5.2.0",
-    "react-live": "^1.11.0",
-    "system-components": "^3.0.0"
+    "react-live": "^2.0.1",
+    "system-components": "^3.0.3"
   },
   "license": "MIT",
   "main": "n/a",
