--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/Dockerfile
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/Dockerfile
@@ -12,7 +12,7 @@ COPY package.json ./
 RUN npm install
 
 # Bundle app source
-COPY tutorial-site/ .
+COPY . .
 
 ENV GATSBY_PATH_PREFIX="/graphql/react"
 
