--- a/community/learn/graphql-tutorials/backend-services/homepage/Dockerfile
+++ b/community/learn/graphql-tutorials/backend-services/homepage/Dockerfile
@@ -20,4 +20,4 @@ RUN npm run build
 EXPOSE 8080
 # serve dist folder on port 8080
 # CMD ["serve", "-s", "public", "-p", "8080"]
-CMD ["gatsby", "serve", "-p", "8080"]
+CMD ["gatsby", "serve", "-p", "8080", "--host", "0.0.0.0"]
