--- a/community/learn/graphql-tutorials/backend-services/homepage/package.json
+++ b/community/learn/graphql-tutorials/backend-services/homepage/package.json
@@ -13,6 +13,7 @@
     "gatsby-link": "^2.0.2",
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-source-graphql": "^2.0.2",
     "node-sass": "^4.9.3",
