--- a/community/learn/graphql-tutorials/manifests/ingress-resource.yaml
+++ b/community/learn/graphql-tutorials/manifests/ingress-resource.yaml
@@ -6,7 +6,7 @@ metadata:
   #    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: graphql-tutorials.org
+  - host: learn.hasura.io
     http:
       paths:
       - path: /
