--- a/community/learn/graphql-tutorials/manifests/ingress-resource.yaml
+++ b/community/learn/graphql-tutorials/manifests/ingress-resource.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ingress
+  annotations:
+    nginx.org/rewrites: "serviceName=hasura rewrite=/v1alpha1/graphql;"
   #  annotations:
   #    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -9,10 +11,6 @@ spec:
   - host: learn.hasura.io
     http:
       paths:
-      - path: /
-        backend:
-          serviceName: homepage
-          servicePort: 80
       - path: /graphql/react
         backend:
           serviceName: react-apollo
@@ -24,4 +22,12 @@ spec:
       - path: /graphql
         backend:
           serviceName: hasura
+          servicePort: 80
+      - path: /graphql/console
+        backend:
+          serviceName: hasura
+          servicePort: 80
+      - path: /
+        backend:
+          serviceName: homepage
           servicePort: 80
