--- a/community/learn/graphql-tutorials/manifests/react-apollo.yaml
+++ b/community/learn/graphql-tutorials/manifests/react-apollo.yaml
@@ -1,18 +1,18 @@
-apiVersion: extensions/v1beta1
+---
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
   labels:
     app: react-apollo
-    hasuraService: custom
   name: react-apollo
   namespace: default
 spec:
   replicas: 1
-  strategy: {}
+  selector:
+    matchLabels:
+      app: react-apollo
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: react-apollo
     spec:
@@ -23,7 +23,19 @@ spec:
         ports:
         - containerPort: 8080
           protocol: TCP
-        resources: {}
-      securityContext: {}
-      terminationGracePeriodSeconds: 0
-status: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: react-apollo
+  name: react-apollo
+  namespace: default
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 8080
+  selector:
+    app: react-apollo
+  type: ClusterIP
