add variable name to the path when there is an error, closes #2050

--- a/server/tests-py/queries/graphql_mutation/insert/geojson/insert_road_single_point_err.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/geojson/insert_road_single_point_err.yaml
@@ -4,7 +4,7 @@ status: 400
 response:
   errors:
   - extensions:
-      path: $.variableValues[0].path.coordinates
+      path: $.variableValues.roads[0].path.coordinates
       code: parse-failed
     message: A LineString needs at least 2 Positions
 query:
