--- a/server/tests-py/queries/graphql_mutation/insert/geojson/insert_area_less_than_4_points_err.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/geojson/insert_area_less_than_4_points_err.yaml
@@ -5,7 +5,7 @@ response:
   errors:
   - extensions:
       code: parse-failed
-      path: $.variableValues[0].area.coordinates[0]
+      path: $.variableValues.areas[0].area.coordinates[0]
     message: A LinearRing needs at least 4 Positions
 query:
   variables:
