--- a/server/tests-py/queries/graphql_mutation/insert/geojson/insert_geometry_unexpected_type_err.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/geojson/insert_geometry_unexpected_type_err.yaml
@@ -5,7 +5,7 @@ response:
   errors:
   - extensions:
       code: parse-failed
-      path: $.variableValues[0].location
+      path: $.variableValues.landmarks[0].location
     message: 'unexpected geometry type: Random'
 query:
   variables:
