--- a/server/tests-py/queries/graphql_mutation/insert/geojson/insert_linear_ring_last_point_not_equal_to_first_err.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/geojson/insert_linear_ring_last_point_not_equal_to_first_err.yaml
@@ -5,7 +5,7 @@ response:
   errors:
   - extensions:
       code: parse-failed
-      path: $.variableValues[0].area.coordinates[0]
+      path: $.variableValues.areas[0].area.coordinates[0]
     message: the first and last locations have to be equal for a LinearRing
 query:
   variables:
