update caddy config

--- a/community/learn/graphql-tutorials/manifests/caddy-config.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy-config.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 data:
   Caddyfile: |
-    :80 { 
+    learn.hasura.io {
       proxy / homepage
       proxy /graphql hasura {
         without /graphql
