--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/Dockerfile
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/Dockerfile
@@ -14,11 +14,12 @@ RUN npm install
 # Bundle app source
 COPY . .
 
-ENV GATSBY_PATH_PREFIX="/graphql/react"
+#ENV GATSBY_PATH_PREFIX="/graphql/react"
 
 # Build react/vue/angular bundle static files
 RUN npm run build
 
 # serve dist folder on port 8080
 #CMD ["serve", "-s", "public", "-p", "8080"]
-CMD ["gatsby", "serve", "--verbose", "--prefix-paths", "-p", "8080", "--host", "0.0.0.0"]
+#CMD ["gatsby", "serve", "--verbose", "--prefix-paths", "-p", "8080", "--host", "0.0.0.0"]
+CMD ["gatsby", "serve", "--verbose", "-p", "8080", "--host", "0.0.0.0"]
