--- a/server/tests-py/pgdump/pg_dump_public.yaml
+++ b/server/tests-py/pgdump/pg_dump_public.yaml
@@ -2,8 +2,13 @@ descriptions: Execute pg_dump on public schema
 url: /v1alpha1/pg_dump
 status: 200
 query:
-  opts: -O -x --schema-only --schema public
-  clean: true
+  opts:
+  - -O
+  - -x
+  - --schema-only
+  - --schema
+  - public
+  clean_output: true
 # response on postgres 9.4 and 9.5
 response_9: |
   CREATE TABLE public.articles (
