--- a/community/learn/graphql-tutorials/manifests/hasura.yaml
+++ b/community/learn/graphql-tutorials/manifests/hasura.yaml
@@ -24,7 +24,7 @@ spec:
         - name: HASURA_GRAPHQL_DATABASE_URL
           value: postgres://postgres:@postgres.default:5432/postgres
         - name: HASURA_GRAPHQL_ENABLE_CONSOLE
-          value: "true"
+          value: "false"
         - name: HASURA_GRAPHQL_ADMIN_SECRET
           valueFrom:
             secretKeyRef:
