--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/package.json
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/package.json
@@ -19,7 +19,7 @@
     "gatsby": "2.3.25",
     "gatsby-mdx": "^0.6.2",
     "gatsby-plugin-emotion": "4.0.6",
-    "gatsby-plugin-google-analytics": "2.0.18",
+    "gatsby-plugin-gtag": "^1.0.10",
     "gatsby-plugin-react-helmet": "3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-remark-copy-linked-files": "^2.0.11",
