testing: adds redirect rule for / again

--- a/community/learn/graphql-tutorials/manifests/caddy-config.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy-config.yaml
@@ -14,7 +14,12 @@ data:
         /graphql/react/ /graphql/react/introduction
       }
 
-      proxy / homepage
+      redir 302 {
+        if {path} is /
+        / /graphql/react/introduction
+      }
+
+      # proxy / homepage
 
       proxy /graphql/console hasura/console {
         without /graphql/console
