add rolling update and fix initial load flickr

--- a/community/learn/graphql-tutorials/manifests/homepage.yaml
+++ b/community/learn/graphql-tutorials/manifests/homepage.yaml
@@ -11,6 +11,10 @@ spec:
   selector:
     matchLabels:
       app: homepage
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
   template:
     metadata:
       labels:
