--- a/community/learn/graphql-tutorials/manifests/caddy.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy.yaml
@@ -11,6 +11,10 @@ spec:
   selector:
     matchLabels:
       app: caddy
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
   template:
     metadata:
       labels:
