--- a/community/learn/graphql-tutorials/manifests/react-apollo.yaml
+++ b/community/learn/graphql-tutorials/manifests/react-apollo.yaml
@@ -11,6 +11,10 @@ spec:
   selector:
     matchLabels:
       app: react-apollo
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
   template:
     metadata:
       labels:
