--- a/server/tests-py/queries/graphql_query/permissions/user_cannot_access_remarks_col.yaml
+++ b/server/tests-py/queries/graphql_query/permissions/user_cannot_access_remarks_col.yaml
@@ -4,6 +4,12 @@
   headers:
     X-Hasura-Role: user
     X-Hasura-User-Id: '1'
+  response:
+    errors:
+    - extensions:
+        path: $.selectionSet.author.selectionSet.remarks_internal
+        code: validation-failed
+      message: "field \"remarks_internal\" not found in type: 'author'"
   query:
     query: |
       query {
