[wip] support whitelisting queries

--- a/server/tests-py/queries/v1/metadata/clear_metadata.yaml
+++ b/server/tests-py/queries/v1/metadata/clear_metadata.yaml
@@ -12,6 +12,7 @@
   status: 200
   response:
     functions: []
+    query_collections: []
     query_templates: []
     tables: []
     remote_schemas: []
