--- a/server/src-rsr/hdb_metadata.yaml
+++ b/server/src-rsr/hdb_metadata.yaml
@@ -279,3 +279,8 @@ args:
         column_mapping:
           return_type_schema: table_schema
           return_type_name: table_name
+
+- type: track_table
+  args:
+    name: hdb_query_collection
+    schema: hdb_catalog
