--- a/server/tests-py/queries/v1/metadata/export_metadata.yaml
+++ b/server/tests-py/queries/v1/metadata/export_metadata.yaml
@@ -31,6 +31,7 @@ response:
     delete_permissions: []
     event_triggers: []
   query_templates: []
+  query_collections: []
   functions:
   - search_articles
 
