--- a/community/learn/graphql-tutorials/manifests/vue-apollo.yaml
+++ b/community/learn/graphql-tutorials/manifests/vue-apollo.yaml
@@ -15,6 +15,7 @@ spec:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
+      maxSurge: 100%
   template:
     metadata:
       labels:
