define toJSON instance to graphql executable document using printer
-> graphql parser library points to the commit in @ecthiender's fork

--- a/server/tests-py/queries/graphql_query/whitelisted/setup.yaml
+++ b/server/tests-py/queries/graphql_query/whitelisted/setup.yaml
@@ -43,6 +43,7 @@ args:
           query ($id: Int!){
             user_by_pk(id: $id){
               id
+              __typename
               name
               company
             }
