--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -240,6 +240,7 @@ library
                      , Hasura.GraphQL.Resolve.Select
                      , Hasura.GraphQL.RemoteServer
                      , Hasura.GraphQL.Context
+                     , Hasura.GraphQL.Instances
                      , Hasura.GraphQL.Resolve.ContextTypes
 
                      , Hasura.Events.Lib
