updated title tags

--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/package.json
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/package.json
@@ -44,7 +44,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build --prefix-paths"
   },
   "devDependencies": {
