--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/Dockerfile.localdev
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/Dockerfile.localdev
@@ -18,11 +18,7 @@ RUN npm install
 RUN rm -R content
 
 # Bundle app source
-COPY config.js .
 COPY . .
 
-# Build static files
-RUN npm run build
-
-# serve dist folder on port 8080
-CMD ["gatsby", "serve", "--verbose", "--prefix-paths", "-p", "8080", "--host", "0.0.0.0"]
+# serve on port 8080
+CMD ["gatsby", "develop", "--verbose", "-p", "8080", "--host", "0.0.0.0"]
