pre-fetch all required metadata while building schema cache, close #1430

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -171,6 +171,7 @@ library
                      , Hasura.RQL.Types.SchemaCache
                      , Hasura.RQL.Types.SchemaCacheTypes
                      , Hasura.RQL.Types.Common
+                     , Hasura.RQL.Types.Catalog
                      , Hasura.RQL.Types.BoolExp
                      , Hasura.RQL.Types.Permission
                      , Hasura.RQL.Types.Error
