refactor internal code names in server and server tests

--- a/server/tests-py/queries/graphql_query/allowlist/query_non_allowlist.yaml
+++ b/server/tests-py/queries/graphql_query/allowlist/query_non_allowlist.yaml
@@ -1,4 +1,4 @@
-description: GraphQL query which is not whitelisted
+description: GraphQL query which is not in allowlist
 url: /v1alpha1/graphql
 status: 400
 response:
@@ -6,7 +6,7 @@ response:
   - extensions:
       path: "$"
       code: validation-failed
-    message: query is not whitelisted
+    message: query is not in allowlist
 query:
   query: |
     query {
