--- a/server/tests-py/queries/graphql_query/allowlist/query_user_with_typename.yaml
+++ b/server/tests-py/queries/graphql_query/allowlist/query_user_with_typename.yaml
@@ -1,4 +1,4 @@
-description: Whitelisted query with typename
+description: Allowlist query with typename
 url: /v1alpha1/graphql
 status: 200
 response:
