--- a/community/learn/graphql-tutorials/manifests/caddy-config.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy-config.yaml
@@ -14,6 +14,10 @@ data:
         /graphql/react/ /graphql/react/introduction
       }
 
+      redir 301 {
+        /graphql/hasura/ /graphql/hasura/introduction
+      }
+
       redir 302 {
         if {path} is /
         / /graphql/react/introduction
@@ -41,6 +45,8 @@ data:
       proxy /graphql/graphiql graphiql {
         without /graphql/graphiql
       }
+
+      proxy /graphql/hasura hasura-backend
 
       proxy /graphql/react react-apollo
 
