--- a/community/learn/graphql-tutorials/manifests/hasura-backend.yaml
+++ b/community/learn/graphql-tutorials/manifests/hasura-backend.yaml
@@ -27,6 +27,10 @@ spec:
         ports:
         - containerPort: 8080
           protocol: TCP
+        readinessProbe:
+          httpGet:
+            path: /graphql/hasura/introduction
+            port: probe
 ---
 apiVersion: v1
 kind: Service
