--- a/community/learn/graphql-tutorials/manifests/hasura-backend.yaml
+++ b/community/learn/graphql-tutorials/manifests/hasura-backend.yaml
@@ -30,7 +30,7 @@ spec:
         readinessProbe:
           httpGet:
             path: /graphql/hasura/introduction
-            port: probe
+            port: 8080
 ---
 apiVersion: v1
 kind: Service
