--- a/community/learn/graphql-tutorials/manifests/homepage.yaml
+++ b/community/learn/graphql-tutorials/manifests/homepage.yaml
@@ -30,7 +30,7 @@ spec:
         readinessProbe:
           httpGet:
             path: /
-            port: probe
+            port: 8080
 ---
 apiVersion: v1
 kind: Service
