--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -166,6 +166,8 @@ library
                      , Hasura.Server.Telemetry
                      , Hasura.Server.SchemaUpdate
                      , Hasura.Server.PGDump
+                     , Hasura.Server.Config
+
                      , Hasura.RQL.Types
                      , Hasura.RQL.Instances
                      , Hasura.RQL.Types.SchemaCache
