close websocket connection on JWT expiry, fix #578

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -146,6 +146,9 @@ library
                      -- metrics in multiplexed subs
                      , ekg-core
 
+                     -- hashable time
+                     , hashable-time
+
   exposed-modules:     Hasura.Prelude
                      , Hasura.Logging
                      , Hasura.EncJSON
