--- a/server/src-rsr/migrate_metadata_from_14_to_15.yaml
+++ b/server/src-rsr/migrate_metadata_from_14_to_15.yaml
@@ -4,3 +4,7 @@ args:
   args:
     schema: hdb_catalog
     name: hdb_query_collection
+- type: track_table
+  args:
+    schema: hdb_catalog
+    name: hdb_allowlist
