--- a/server/tests-py/queries/v1/metadata/clear_metadata.yaml
+++ b/server/tests-py/queries/v1/metadata/clear_metadata.yaml
@@ -11,6 +11,7 @@
   url: /v1/query
   status: 200
   response:
+    allowlist: []
     functions: []
     query_collections: []
     query_templates: []
