--- a/server/tests-py/queries/v1/metadata/export_metadata.yaml
+++ b/server/tests-py/queries/v1/metadata/export_metadata.yaml
@@ -32,6 +32,7 @@ response:
     event_triggers: []
   query_templates: []
   query_collections: []
+  allowlist: []
   functions:
   - search_articles
 
