revert to v1alpha1

--- a/community/learn/graphql-tutorials/manifests/caddy-config.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy-config.yaml
@@ -29,8 +29,8 @@ data:
         without /graphql/console
       }
 
-      proxy /graphql/v1/graphql hasura/v1/graphql {
-        without /graphql/v1/graphql
+      proxy /graphql/v1alpha1/graphql hasura/v1alpha1/graphql {
+        without /graphql/v1alpha1/graphql
         websocket
       }
 
@@ -50,7 +50,7 @@ data:
 
       proxy /graphql/react react-apollo
 
-      proxy /graphql hasura/v1/graphql {
+      proxy /graphql hasura/v1alpha1/graphql {
         without /graphql
         websocket
       }
