--- a/community/learn/graphql-tutorials/manifests/caddy-config.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy-config.yaml
@@ -14,6 +14,10 @@ data:
         /graphql/react/ /graphql/react/introduction
       }
 
+      redir 301 {
+        /graphql/hasura/ /graphql/hasura/introduction
+      }
+
       redir 302 {
         if {path} is /
         / /graphql/react/introduction
@@ -25,8 +29,8 @@ data:
         without /graphql/console
       }
 
-      proxy /graphql/v1/graphql hasura/v1/graphql {
-        without /graphql/v1/graphql
+      proxy /graphql/v1alpha1/graphql hasura/v1alpha1/graphql {
+        without /graphql/v1alpha1/graphql
         websocket
       }
 
@@ -42,9 +46,11 @@ data:
         without /graphql/graphiql
       }
 
+      proxy /graphql/hasura hasura-backend
+
       proxy /graphql/react react-apollo
 
-      proxy /graphql hasura/v1/graphql {
+      proxy /graphql hasura/v1alpha1/graphql {
         without /graphql
         websocket
       }
