--- a/community/learn/graphql-tutorials/manifests/auth-webhook.yaml
+++ b/community/learn/graphql-tutorials/manifests/auth-webhook.yaml
@@ -26,7 +26,7 @@ spec:
         name: auth-webhook
         env:
         - name: PORT
-          value: 8080
+          value: "8080"
         - name: CUSTOM_JWT_SECRET
           valueFrom:
             secretKeyRef:
